--- a/Workspace/Project/WebContent/css/main.css
+++ b/Workspace/Project/WebContent/css/main.css
@@ -1,3 +1,117 @@
-.col {
-    padding: 0;
+@import 'common.css';
+
+body {
+    background-image: url(../images/login-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
+.main-content {
+    display: flex;
+    gap: 1rem;
+}
+
+.left-content {
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+    gap: 0.7rem;
+}
+
+.right-content {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.notice-container {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    border-radius: 20px;
+    border: 2px solid #000;
+}
+
+.notice-container img {
+    border-radius: 18px;
+}
+
+.notice-btn {
+    width: 30px;
+    height: 30px;
+    border-radius: 30px;
+}
+
+.review-container {
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+    border: 2px solid #000;
+    padding: 1rem;
+}
+
+.request-container {
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+    border: 2px solid #000;
+    padding: 1rem;
+}
+
+
+
+.review-container tbody tr:hover {
+    background-color: black;
+    color: white;
+    transition: all 0.3s;
+}
+
+.request-container tbody tr:hover {
+    background-color: black;
+    color: white;
+    transition: all 0.3s;
+}
+
+.notice-control-panel {
+    position: absolute;
+    display: flex;
+    gap: 20px;
+    justify-items: center;
+    align-items: center;
+    padding: 5px;
+    border-radius: 20px;
+    height: 40px;
+    bottom: 10px;
+    right: 0px;
+    margin-right: 10px;
+    background-color:#000;
+    color: white;
+}
+
+
+.notice-control-panel button:hover {
+    transform: scale(1.2);
+    transition: all 0.3s;
+}
+
+.notice-control-panel .back {
+    border: none;
+    background-image: url(../images/back.png);
+    background-size: 30px;
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    border-radius: 30px;
+}
+
+.notice-control-panel .forward {
+    border: none;
+    background-image: url(../images/forward.png);
+    background-size: 30px;
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    border-radius: 30px;
+}
+
+
