희망 도서 신청 페이지 제작  - 희망 도서신청 페이지  - 희망 도서신청 글쓰기 페이지  - 희망 도서신청 글보기 페이지
도서 후기 관련 페이지 제작
 - 도서 후기 글보기
 - 도서 후기 글쓰기
 - 도서 후기 글목록

포인트 충전 페이지 추가

마이페이지 추가
 - 왼쪽 마이페이지 사이드 메뉴 추가
 - 대여목록 페이지 완료

--- a/Workspace/Project/WebContent/css/left-content-ranking.css
+++ b/Workspace/Project/WebContent/css/left-content-ranking.css
@@ -1,4 +1,11 @@
 
+.left-content .card {
+    border: 2px solid #000;
+}
+
+.left-content .card:hover {
+    box-shadow: 2px 2px 10px;
+}
 
 .left-content .rating-span {
     font-size: 16px;
