--- a/Workspace/Project/WebContent/css/common.css
+++ b/Workspace/Project/WebContent/css/common.css
@@ -48,7 +48,6 @@ body {
 }
 
 
-/* 공통 페이지네이션 패널 */
 .pagination-panel {
     display: flex;
     justify-items: center;
@@ -120,12 +119,21 @@ body {
     border-radius: 20px;
 }
 
+.btn-normal {
+    background-color: var(--default-btn-bg-color);
+    color: var(--default-btn-text-color);
+}
 
-/* 버튼 효과 */
-.btn-reverse {
+.btn-normal:hover {
     border: 1px solid var(--default-btn-bg-color);
     background-color: var(--default-btn-text-color);
     color: var(--default-btn-bg-color);
+}
+
+.btn-reverse {
+    border: 1px solid var(--default-btn-bg-color);
+    background-color: var(--default-btn-text-color);
+    color: black;
 }
 
 .btn-reverse:hover {
@@ -144,22 +152,29 @@ body {
     transition: all 0.3s linear;
 }
 
-/* 테이블 효과 */
+.table {
+    text-align: center;
+}
+
 .table tbody tr:hover {
     background-color: black;
     color: white;
     transition: all 0.3s;
+    
+}
+
+.table tbody tr td:nth-child(2) {
+    text-align: left;
 }
 
 .table tbody tr td:nth-child(2):hover {
-    text-decoration: underline ;
+    text-decoration: underline;
 }
 
-/* 테이블 효과 */
 .border-container {
     width: 100%;
     height: auto;
-    border-radius: 20px;
+    border-radius: 5px;
     border: 2px solid #000;
     padding: 1rem;
 }
